--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -17,7 +17,7 @@
     <div class="page-header" id="banner">
         <div class="row">
             <div class="col-lg-8 col-md-7 col-sm-6">
-                <form class="form-horizontal" th:action="@{/developers}" method="get">
+                <form class="form-horizontal" th:action="@{/api/profiles}" method="get">
                     <fieldset>
                         <div class="form-group">
                             <label class="col-lg-2 control-label">Username: </label>
